Add role management DTOs and repositories; refactor mappers for improved readability